[project]
name = "pmd-pylibrary"
version = "0.1.0"
description = "Private modular data tools"
# dependencies = ["polars", "pandas", "pyarrow", "openpyxl", "python-calamine"]
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "pmdlib"}  # Tells setuptools to treat 'pmdlib/' as root
packages = ["pmdlib.analytics", "pmdlib.db", "pmdlib.utils"]
